src/libs/antares/antlr-interface/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.13.1

#include "ExprParser.h"

#include "ExprVisitor.h"

using namespace antlrcpp;

using namespace antlr4;

namespace
{

struct ExprParserStaticData final
{
    ExprParserStaticData(std::vector<std::string> ruleNames,
                         std::vector<std::string> literalNames,
                         std::vector<std::string> symbolicNames):
        ruleNames(std::move(ruleNames)),
        literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames)
    {
    }

    ExprParserStaticData(const ExprParserStaticData&) = delete;
    ExprParserStaticData(ExprParserStaticData&&) = delete;
    ExprParserStaticData& operator=(const ExprParserStaticData&) = delete;
    ExprParserStaticData& operator=(ExprParserStaticData&&) = delete;

    std::vector<antlr4::dfa::DFA> decisionToDFA;
    antlr4::atn::PredictionContextCache sharedContextCache;
    const std::vector<std::string> ruleNames;
    const std::vector<std::string> literalNames;
    const std::vector<std::string> symbolicNames;
    const antlr4::dfa::Vocabulary vocabulary;
    antlr4::atn::SerializedATNView serializedATN;
    std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag exprParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
  ExprParserStaticData* exprParserStaticData
  = nullptr;

void exprParserInitialize()
{
#if ANTLR4_USE_THREAD_LOCAL_CACHE
    if (exprParserStaticData != nullptr)
    {
        return;
    }
#else
    assert(exprParserStaticData == nullptr);
#endif
    auto staticData = std::make_unique<ExprParserStaticData>(std::vector<std::string>{"fullexpr",
                                                                                      "shift",
                                                                                      "expr"},
                                                             std::vector<std::string>{"",
                                                                                      "'+'",
                                                                                      "'-'",
                                                                                      "'/'",
                                                                                      "'*'",
                                                                                      "'.'",
                                                                                      "'('",
                                                                                      "')'",
                                                                                      "','",
                                                                                      "'..'",
                                                                                      "",
                                                                                      "'t'",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "'['",
                                                                                      "']'"},
                                                             std::vector<std::string>{"",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "",
                                                                                      "NUMBER",
                                                                                      "TIME",
                                                                                      "IDENTIFIER",
                                                                                      "COMPARISON",
                                                                                      "ADDSUB",
                                                                                      "MULDIV",
                                                                                      "LBRACKET",
                                                                                      "RBRACKET",
                                                                                      "WS"});
    staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment,
                                                               sizeof(serializedATNSegment)
                                                                 / sizeof(serializedATNSegment[0]));

    antlr4::atn::ATNDeserializer deserializer;
    staticData->atn = deserializer.deserialize(staticData->serializedATN);

    const size_t count = staticData->atn->getNumberOfDecisions();
    staticData->decisionToDFA.reserve(count);
    for (size_t i = 0; i < count; i++)
    {
        staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
    }
    exprParserStaticData = staticData.release();
}

} // namespace

ExprParser::ExprParser(TokenStream* input):
    ExprParser(input, antlr4::atn::ParserATNSimulatorOptions())
{
}

ExprParser::ExprParser(TokenStream* input, const antlr4::atn::ParserATNSimulatorOptions& options):
    Parser(input)
{
    ExprParser::initialize();
    _interpreter = new atn::ParserATNSimulator(this,
                                               *exprParserStaticData->atn,
                                               exprParserStaticData->decisionToDFA,
                                               exprParserStaticData->sharedContextCache,
                                               options);
}

ExprParser::~ExprParser()
{
    delete _interpreter;
}

const atn::ATN& ExprParser::getATN() const
{
    return *exprParserStaticData->atn;
}

std::string ExprParser::getGrammarFileName() const
{
    return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const
{
    return exprParserStaticData->ruleNames;
}

const dfa::Vocabulary& ExprParser::getVocabulary() const
{
    return exprParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ExprParser::getSerializedATN() const
{
    return exprParserStaticData->serializedATN;
}

//----------------- FullexprContext
//------------------------------------------------------------------

ExprParser::FullexprContext::FullexprContext(ParserRuleContext* parent, size_t invokingState):
    ParserRuleContext(parent, invokingState)
{
}

ExprParser::ExprContext* ExprParser::FullexprContext::expr()
{
    return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::FullexprContext::EOF()
{
    return getToken(ExprParser::EOF, 0);
}

size_t ExprParser::FullexprContext::getRuleIndex() const
{
    return ExprParser::RuleFullexpr;
}

std::any ExprParser::FullexprContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitFullexpr(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

ExprParser::FullexprContext* ExprParser::fullexpr()
{
    FullexprContext* _localctx = _tracker.createInstance<FullexprContext>(_ctx, getState());
    enterRule(_localctx, 0, ExprParser::RuleFullexpr);

#if __cplusplus > 201703L
    auto onExit = finally(
      [=, this]
      {
#else
    auto onExit = finally(
      [=]
      {
#endif
          exitRule();
      });
    try
    {
        enterOuterAlt(_localctx, 1);
        setState(6);
        expr(0);
        setState(7);
        match(ExprParser::EOF);
    }
    catch (RecognitionException& e)
    {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ShiftContext ------------------------------------------------------------------

ExprParser::ShiftContext::ShiftContext(ParserRuleContext* parent, size_t invokingState):
    ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* ExprParser::ShiftContext::TIME()
{
    return getToken(ExprParser::TIME, 0);
}

ExprParser::ExprContext* ExprParser::ShiftContext::expr()
{
    return getRuleContext<ExprParser::ExprContext>(0);
}

size_t ExprParser::ShiftContext::getRuleIndex() const
{
    return ExprParser::RuleShift;
}

std::any ExprParser::ShiftContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitShift(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

ExprParser::ShiftContext* ExprParser::shift()
{
    ShiftContext* _localctx = _tracker.createInstance<ShiftContext>(_ctx, getState());
    enterRule(_localctx, 2, ExprParser::RuleShift);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally(
      [=, this]
      {
#else
    auto onExit = finally(
      [=]
      {
#endif
          exitRule();
      });
    try
    {
        enterOuterAlt(_localctx, 1);
        setState(9);
        match(ExprParser::TIME);
        setState(12);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ExprParser::T__0

            || _la == ExprParser::T__1)
        {
            setState(10);
            antlrcpp::downCast<ShiftContext*>(_localctx)->op = _input->LT(1);
            _la = _input->LA(1);
            if (!(_la == ExprParser::T__0

                  || _la == ExprParser::T__1))
            {
                antlrcpp::downCast<ShiftContext*>(_localctx)->op = _errHandler->recoverInline(this);
            }
            else
            {
                _errHandler->reportMatch(this);
                consume();
            }
            setState(11);
            expr(0);
        }
    }
    catch (RecognitionException& e)
    {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

ExprParser::ExprContext::ExprContext(ParserRuleContext* parent, size_t invokingState):
    ParserRuleContext(parent, invokingState)
{
}

size_t ExprParser::ExprContext::getRuleIndex() const
{
    return ExprParser::RuleExpr;
}

void ExprParser::ExprContext::copyFrom(ExprContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- IdentifierContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::IdentifierContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

ExprParser::IdentifierContext::IdentifierContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::IdentifierContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitIdentifier(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- NegationContext
//------------------------------------------------------------------

ExprParser::ExprContext* ExprParser::NegationContext::expr()
{
    return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::NegationContext::NegationContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::NegationContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitNegation(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- ExpressionContext
//------------------------------------------------------------------

ExprParser::ExprContext* ExprParser::ExpressionContext::expr()
{
    return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::ExpressionContext::ExpressionContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::ExpressionContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitExpression(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- ComparisonContext
//------------------------------------------------------------------

std::vector<ExprParser::ExprContext*> ExprParser::ComparisonContext::expr()
{
    return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::ComparisonContext::expr(size_t i)
{
    return getRuleContext<ExprParser::ExprContext>(i);
}

tree::TerminalNode* ExprParser::ComparisonContext::COMPARISON()
{
    return getToken(ExprParser::COMPARISON, 0);
}

ExprParser::ComparisonContext::ComparisonContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::ComparisonContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitComparison(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- AddsubContext ------------------------------------------------------------------

std::vector<ExprParser::ExprContext*> ExprParser::AddsubContext::expr()
{
    return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::AddsubContext::expr(size_t i)
{
    return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::AddsubContext::AddsubContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::AddsubContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitAddsub(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- PortFieldContext
//------------------------------------------------------------------

std::vector<tree::TerminalNode*> ExprParser::PortFieldContext::IDENTIFIER()
{
    return getTokens(ExprParser::IDENTIFIER);
}

tree::TerminalNode* ExprParser::PortFieldContext::IDENTIFIER(size_t i)
{
    return getToken(ExprParser::IDENTIFIER, i);
}

ExprParser::PortFieldContext::PortFieldContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::PortFieldContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitPortField(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- MuldivContext ------------------------------------------------------------------

std::vector<ExprParser::ExprContext*> ExprParser::MuldivContext::expr()
{
    return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::MuldivContext::expr(size_t i)
{
    return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::MuldivContext::MuldivContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::MuldivContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitMuldiv(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- NumberContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::NumberContext::NUMBER()
{
    return getToken(ExprParser::NUMBER, 0);
}

ExprParser::NumberContext::NumberContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::NumberContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitNumber(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- TimeIndexContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::TimeIndexContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::TimeIndexContext::LBRACKET()
{
    return getToken(ExprParser::LBRACKET, 0);
}

std::vector<ExprParser::ExprContext*> ExprParser::TimeIndexContext::expr()
{
    return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::TimeIndexContext::expr(size_t i)
{
    return getRuleContext<ExprParser::ExprContext>(i);
}

tree::TerminalNode* ExprParser::TimeIndexContext::RBRACKET()
{
    return getToken(ExprParser::RBRACKET, 0);
}

ExprParser::TimeIndexContext::TimeIndexContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::TimeIndexContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitTimeIndex(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- TimeShiftContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::TimeShiftContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::TimeShiftContext::LBRACKET()
{
    return getToken(ExprParser::LBRACKET, 0);
}

std::vector<ExprParser::ShiftContext*> ExprParser::TimeShiftContext::shift()
{
    return getRuleContexts<ExprParser::ShiftContext>();
}

ExprParser::ShiftContext* ExprParser::TimeShiftContext::shift(size_t i)
{
    return getRuleContext<ExprParser::ShiftContext>(i);
}

tree::TerminalNode* ExprParser::TimeShiftContext::RBRACKET()
{
    return getToken(ExprParser::RBRACKET, 0);
}

ExprParser::TimeShiftContext::TimeShiftContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::TimeShiftContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitTimeShift(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- FunctionContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::FunctionContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

ExprParser::ExprContext* ExprParser::FunctionContext::expr()
{
    return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::FunctionContext::FunctionContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::FunctionContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitFunction(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- TimeShiftRangeContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::TimeShiftRangeContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::TimeShiftRangeContext::LBRACKET()
{
    return getToken(ExprParser::LBRACKET, 0);
}

tree::TerminalNode* ExprParser::TimeShiftRangeContext::RBRACKET()
{
    return getToken(ExprParser::RBRACKET, 0);
}

std::vector<ExprParser::ShiftContext*> ExprParser::TimeShiftRangeContext::shift()
{
    return getRuleContexts<ExprParser::ShiftContext>();
}

ExprParser::ShiftContext* ExprParser::TimeShiftRangeContext::shift(size_t i)
{
    return getRuleContext<ExprParser::ShiftContext>(i);
}

ExprParser::TimeShiftRangeContext::TimeShiftRangeContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::TimeShiftRangeContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitTimeShiftRange(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

//----------------- TimeRangeContext
//------------------------------------------------------------------

tree::TerminalNode* ExprParser::TimeRangeContext::IDENTIFIER()
{
    return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::TimeRangeContext::LBRACKET()
{
    return getToken(ExprParser::LBRACKET, 0);
}

std::vector<ExprParser::ExprContext*> ExprParser::TimeRangeContext::expr()
{
    return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::TimeRangeContext::expr(size_t i)
{
    return getRuleContext<ExprParser::ExprContext>(i);
}

tree::TerminalNode* ExprParser::TimeRangeContext::RBRACKET()
{
    return getToken(ExprParser::RBRACKET, 0);
}

ExprParser::TimeRangeContext::TimeRangeContext(ExprContext* ctx)
{
    copyFrom(ctx);
}

std::any ExprParser::TimeRangeContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    {
        return parserVisitor->visitTimeRange(this);
    }
    else
    {
        return visitor->visitChildren(this);
    }
}

ExprParser::ExprContext* ExprParser::expr()
{
    return expr(0);
}

ExprParser::ExprContext* ExprParser::expr(int precedence)
{
    ParserRuleContext* parentContext = _ctx;
    size_t parentState = getState();
    ExprParser::ExprContext* _localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
    ExprParser::ExprContext* previousContext = _localctx;
    (void)previousContext; // Silence compiler, in case the context is not used by generated code.
    size_t startState = 4;
    enterRecursionRule(_localctx, 4, ExprParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally(
      [=, this]
      {
#else
    auto onExit = finally(
      [=]
      {
#endif
          unrollRecursionContexts(parentContext);
      });
    try
    {
        size_t alt;
        enterOuterAlt(_localctx, 1);
        setState(69);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx))
        {
        case 1:
        {
            _localctx = _tracker.createInstance<NegationContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;

            setState(15);
            match(ExprParser::T__1);
            setState(16);
            expr(13);
            break;
        }

        case 2:
        {
            _localctx = _tracker.createInstance<IdentifierContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(17);
            match(ExprParser::IDENTIFIER);
            break;
        }

        case 3:
        {
            _localctx = _tracker.createInstance<PortFieldContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(18);
            match(ExprParser::IDENTIFIER);
            setState(19);
            match(ExprParser::T__4);
            setState(20);
            match(ExprParser::IDENTIFIER);
            break;
        }

        case 4:
        {
            _localctx = _tracker.createInstance<NumberContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(21);
            match(ExprParser::NUMBER);
            break;
        }

        case 5:
        {
            _localctx = _tracker.createInstance<ExpressionContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(22);
            match(ExprParser::T__5);
            setState(23);
            expr(0);
            setState(24);
            match(ExprParser::T__6);
            break;
        }

        case 6:
        {
            _localctx = _tracker.createInstance<FunctionContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(26);
            match(ExprParser::IDENTIFIER);
            setState(27);
            match(ExprParser::T__5);
            setState(28);
            expr(0);
            setState(29);
            match(ExprParser::T__6);
            break;
        }

        case 7:
        {
            _localctx = _tracker.createInstance<TimeShiftContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(31);
            match(ExprParser::IDENTIFIER);
            setState(32);
            match(ExprParser::LBRACKET);
            setState(33);
            shift();
            setState(38);
            _errHandler->sync(this);
            _la = _input->LA(1);
            while (_la == ExprParser::T__7)
            {
                setState(34);
                match(ExprParser::T__7);
                setState(35);
                shift();
                setState(40);
                _errHandler->sync(this);
                _la = _input->LA(1);
            }
            setState(41);
            match(ExprParser::RBRACKET);
            break;
        }

        case 8:
        {
            _localctx = _tracker.createInstance<TimeIndexContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(43);
            match(ExprParser::IDENTIFIER);
            setState(44);
            match(ExprParser::LBRACKET);
            setState(45);
            expr(0);
            setState(50);
            _errHandler->sync(this);
            _la = _input->LA(1);
            while (_la == ExprParser::T__7)
            {
                setState(46);
                match(ExprParser::T__7);
                setState(47);
                expr(0);
                setState(52);
                _errHandler->sync(this);
                _la = _input->LA(1);
            }
            setState(53);
            match(ExprParser::RBRACKET);
            break;
        }

        case 9:
        {
            _localctx = _tracker.createInstance<TimeShiftRangeContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(55);
            match(ExprParser::IDENTIFIER);
            setState(56);
            match(ExprParser::LBRACKET);
            setState(57);
            antlrcpp::downCast<TimeShiftRangeContext*>(_localctx)->shift1 = shift();
            setState(58);
            match(ExprParser::T__8);
            setState(59);
            antlrcpp::downCast<TimeShiftRangeContext*>(_localctx)->shift2 = shift();
            setState(60);
            match(ExprParser::RBRACKET);
            break;
        }

        case 10:
        {
            _localctx = _tracker.createInstance<TimeRangeContext>(_localctx);
            _ctx = _localctx;
            previousContext = _localctx;
            setState(62);
            match(ExprParser::IDENTIFIER);
            setState(63);
            match(ExprParser::LBRACKET);
            setState(64);
            expr(0);
            setState(65);
            match(ExprParser::T__8);
            setState(66);
            expr(0);
            setState(67);
            match(ExprParser::RBRACKET);
            break;
        }

        default:
            break;
        }
        _ctx->stop = _input->LT(-1);
        setState(82);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER)
        {
            if (alt == 1)
            {
                if (!_parseListeners.empty())
                {
                    triggerExitRuleEvent();
                }
                previousContext = _localctx;
                setState(80);
                _errHandler->sync(this);
                switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx))
                {
                case 1:
                {
                    auto newContext = _tracker.createInstance<MuldivContext>(
                      _tracker.createInstance<ExprContext>(parentContext, parentState));
                    _localctx = newContext;
                    pushNewRecursionContext(newContext, startState, RuleExpr);
                    setState(71);

                    if (!(precpred(_ctx, 12)))
                    {
                        throw FailedPredicateException(this, "precpred(_ctx, 12)");
                    }
                    setState(72);
                    antlrcpp::downCast<MuldivContext*>(_localctx)->op = _input->LT(1);
                    _la = _input->LA(1);
                    if (!(_la == ExprParser::T__2

                          || _la == ExprParser::T__3))
                    {
                        antlrcpp::downCast<MuldivContext*>(_localctx)->op = _errHandler
                                                                              ->recoverInline(this);
                    }
                    else
                    {
                        _errHandler->reportMatch(this);
                        consume();
                    }
                    setState(73);
                    expr(13);
                    break;
                }

                case 2:
                {
                    auto newContext = _tracker.createInstance<AddsubContext>(
                      _tracker.createInstance<ExprContext>(parentContext, parentState));
                    _localctx = newContext;
                    pushNewRecursionContext(newContext, startState, RuleExpr);
                    setState(74);

                    if (!(precpred(_ctx, 11)))
                    {
                        throw FailedPredicateException(this, "precpred(_ctx, 11)");
                    }
                    setState(75);
                    antlrcpp::downCast<AddsubContext*>(_localctx)->op = _input->LT(1);
                    _la = _input->LA(1);
                    if (!(_la == ExprParser::T__0

                          || _la == ExprParser::T__1))
                    {
                        antlrcpp::downCast<AddsubContext*>(_localctx)->op = _errHandler
                                                                              ->recoverInline(this);
                    }
                    else
                    {
                        _errHandler->reportMatch(this);
                        consume();
                    }
                    setState(76);
                    expr(12);
                    break;
                }

                case 3:
                {
                    auto newContext = _tracker.createInstance<ComparisonContext>(
                      _tracker.createInstance<ExprContext>(parentContext, parentState));
                    _localctx = newContext;
                    pushNewRecursionContext(newContext, startState, RuleExpr);
                    setState(77);

                    if (!(precpred(_ctx, 10)))
                    {
                        throw FailedPredicateException(this, "precpred(_ctx, 10)");
                    }
                    setState(78);
                    match(ExprParser::COMPARISON);
                    setState(79);
                    expr(11);
                    break;
                }

                default:
                    break;
                }
            }
            setState(84);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
        }
    }
    catch (RecognitionException& e)
    {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

bool ExprParser::sempred(RuleContext* context, size_t ruleIndex, size_t predicateIndex)
{
    switch (ruleIndex)
    {
    case 2:
        return exprSempred(antlrcpp::downCast<ExprContext*>(context), predicateIndex);

    default:
        break;
    }
    return true;
}

bool ExprParser::exprSempred(ExprContext* _localctx, size_t predicateIndex)
{
    switch (predicateIndex)
    {
    case 0:
        return precpred(_ctx, 12);
    case 1:
        return precpred(_ctx, 11);
    case 2:
        return precpred(_ctx, 10);

    default:
        break;
    }
    return true;
}

void ExprParser::initialize()
{
#if ANTLR4_USE_THREAD_LOCAL_CACHE
    exprParserInitialize();
#else
    ::antlr4::internal::call_once(exprParserOnceFlag, exprParserInitialize);
#endif
}
